
    CHANGES

    version history for ferm

    Auke Kok <sofar@foo-projects.org>
    Max Kellermann <max@foo-projects.org>


v1.2.4 - not yet released
  - support netfilter modules: hashlimit


v1.2.3 - 14 Feb 2007
  - subchains may be named
  - don't copy module references to subchain (patch by Alex Metelka)
  - override variables on the command line with "--def"
  - auto-load modules only when their parameters are used
  - documentation:
    * targets MIRROR, NETMAP, NFQUEUE, NOTRACK, QUEUE


v1.2.2 - 15 Nov 2006
  - documentation:
    * warn against using iptables 1.2 with import-ferm
    * extended the transition section in the manpage
  - support netfilter modules: account
  - bugfix: don't clear variable value when used as parameter in
    multiport/destination-ports (reported by Bill Goudie)


v1.2.1 - 25 Sep 2006
  - bugfix: reset domains after all rules were parsed and don't forget to
    reset a table; this bug only affects users who run ferm on a remote
    machine
  - reset policy on all guessed built-in chains if no authoritative
    information about built-in chains is available
  - support netfilter modules: condition, fuzzy, hbh, hl, ipv6header, rt,
    quota, HL
  - extended module support
    * ah now supports the IPv6 options
  - added missing documentation
    * target ECN
    * match modules: dst, eui64, frag
  - disabled array after ttl-lt, ttl-gt
  - allow "length", "physdev", "tos" negation
  - translate sports, dports to source-ports, destination-ports in import-ferm
  - added the "--remote" option


v1.2 - 13 Sep 2006
  - import-ferm runs iptables-save if no input file is provided


v1.2beta2 - 9 Sep 2006
  - added --flush
  - added --shell which generates a shell script
  - don't check available netfilter modules
  - read iptables-save in initialize_netfilter()
  - option --location is deprecated, ferm now calls /sbin/iptables
  - whitespace fix in import-ferm
  - allow late chain/table specification again