@@ -83,9 +83,13 @@ while (<>) {
         s/-s\b/--source/g;
         s/-f\b/--fragment/g;
 
+        # evaluate options with name collisions
+        s/--set\s+(\w+)\s+([\w,]+)/$item->{ipset_set} = [$1, $2]; ''/eg
+          if exists $modules{set};
+
         # evaluate options with zero, one, two parameters
         s/(?:(!)\s*)?--(syn|clamp-mss-to-pmtu|set|rcheck|log-tcp-sequence|log-tcp-options|log-ip-options|continue|save-mark|restore-mark|fragment|ecn-tcp-cwr|ecn-tcp-ece|physdev-is-(?:in|out|bridged)|strict|next|frag(res|first|more|last)|nodst|ecn-tcp-remove|ahres|soft|rt-0-res|rt-0-not-strict|ashort)(?:\s|$)/$item->{$2} = $1; ''/eg;
-        s/--(tcp-flags|chunk-types)\s+(?:(\!)\s+)?(\S+)\s+(\S+)/$item->{$1} = [ $2, $3, $4 ]; ''/eg;
+        s/--(tcp-flags|chunk-types|add-set|del-set)\s+(?:(\!)\s+)?(\S+)\s+(\S+)/$item->{$1} = [ $2, $3, $4 ]; ''/eg;
         s/(?:(!)\s*)?--(iplimit-above|src-range|dst-range|tos)\s+(\S+)/$item->{$2} = [ $1, $2 ]; ''/eg;
         s/--(\w[-\w]*)\s+(!)?\s*(".*?"|'.*?'|\S+)/$item->{$1} = (defined $2 ? "$2\t" : "") . shell_unescape($3); ''/eg;
 
